tests/good/21_function_args.src
# Test: Function call with arguments
int add(int a, int b) {
    return a + b;
}

void main() {
    print_int(add(10, 20));
}
