tests/bad/22_missing_comma.src
# Test: Missing comma in parameter list
int add(int a int b) {  # Missing comma
    return a + b;
}

void main() {
    return add(5, 10);
}
